<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="submit">Submit</string>
    <string name="addNewPerson">Add new person</string>
    
    <string name="new_group_title">Add new group</string>
    <string name="name">Name:</string>
    <string name="persons">People:</string>
    <string name="add_group">+ G</string>
    <string name="add_person">+ P</string> <!--  TODO: neco lepsiho... -->
    <string name="back">back</string>
    <string name="app_name">Do I Know You?</string>
	<string name="enter_group_name">Enter name</string>
	<string name="start_test">Test</string>
	<string name="create_group_btn">Create</string>
	<string name="add_person_to_group_btn">Add person</string>
	<string name="selectGroup">Please select group:</string>
	<string name="addNewPerson_textEdit">Enter name</string>
	<string name="addNewPerson_spinner">Select group</string>
	<string name="addNewPerson_submit">Done</string>
	<string name="select_persons">Select persons</string>
	<string name="saveSelectedTxt">OK</string>
	<string name="test_results">Test results</string>
	<string name="test_result_ok">OK</string>
	<string name="okay">OK</string>
	<string name="addPhoto">Add photo</string>
	<string name="listPhoto">List of photos:</string>
	<string name="group_already_exists">A group with this name already exists. Please choose another one.</string>
	<string name="group_empty">The group name can not be empty!</string>
	<string name="too_few_members">This group has too few members.</string>
	<string name="make_your_guess">Please, make your guess.</string>
	<string name="really_delete_group">Do you really want to delete this group?</string>
	<string name="really_delete_person">Do you really want to delete this person?</string>
	<string name="test_next_question">Next question&#8230;</string>
	<string name="testing">Testing</string>
	<string name="results">Result</string>
	<string name="name_not_set">Please enter name! </string>
	<string name="menuAboutString">About</string>
	<string name="imageFromGallery">Gallery</string>
	<string name="imageFromCamera">Camera</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="addAnotherPerson_title">Person added</string>
	<string name="addAnotherPerson_query">New person has been added. Add another one?</string>
	<string name="addPhotoDialog_title">Add new photo</string>
</resources>
