<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
	        android:id="@+id/text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_name"
	        android:textColor="#fff"
	        />
        <Button 
            android:text="@string/add_group"
            android:id="@+id/addNewGroupButton"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
        <Button 
            android:text="@string/add_person"
            android:id="@+id/addNewPersonButton"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
        
     <ListView
         android:id="@+id/list_of_groups"
         android:background="#f00"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:divider="#fff"
         />
</LinearLayout>