<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout android:orientation="horizontal"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content">

	    <Button
	        android:id="@+id/runTestButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/start_test"
	        android:onClick="runTest"
	        
	         />

	    <TextView
	        android:id="@+id/group_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/addNewPersonButton"
	        android:layout_alignBottom="@+id/addNewPersonButton"
	        android:layout_alignParentLeft="true"
	        android:text="@string/app_name"
	        android:textColor="#fff" />

	    <Button
	        android:id="@+id/addPersonGroupButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toLeftOf="@+id/runTestButton"
	        android:onClick="addPerson"
	        android:text="@string/add_person" />


	</RelativeLayout>
     <ListView
         android:id="@+id/list_of_people"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:divider="#fff"
         />
</LinearLayout>